<resources>
    <string name="app_name">TravelXApp</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="travel_details_name">Enter travel name</string>
    <string name="travel_details_start_point">Enter start point</string>
    <string name="travel_details_end_point">Enter end point</string>
    <string name="travel_details_date">Enter start Date</string>
    <string name="travel_details_time">Enter end Time</string>
    <string name="add_travel_details_note">*note: you can end your travel from details after you finish your trip</string>
    <string name="travel_details_save">Save</string>
    <string name="travel_details_time_picker">please pick a valid time</string>
    <string name="travel_details_date_picker">Select date</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC_9uZBC_Sv84f4eAb4gZ2bsPHWBEi8NSY
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_page_title">Upcoming</string>
    <string name="history_page_title">History</string>
    <string name="notes_title">Notes:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="travel_details_start">start</string>
    <string name="dialog_title">Dialog.....</string>
    <string name="reminder_done_text">Done</string>
    <string name="reminder_cancel_text">Cancel</string>
    <string name="reminder_start_text">Start</string>
    <string name="travel_details_done">End travel</string>
    <string name="delete_action">delete</string>
    <string name="note_hint">+ Add Notes</string>
</resources>
